# drive-daemon

./: README.md  meson.build
data/: autostart.desktop  meson.build
src/: Application.vala
