install_data(
    'autostart.desktop',
    install_dir: join_paths(get_option('sysconfdir'), 'xdg', 'autostart'),
    rename: meson.project_name() + '.desktop'
)

install_data(
    'autostart.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications'),
    rename: meson.project_name() + '.desktop'
)
